Added Personal Profile

--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Daud Asia - Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <header>
+    <h1>Daud Asia</h1>
+    <p>MBBS Student | Project Management Enthusiast | Aspiring Software Engineer</p>
+  </header>
+  
+  <section class="welcome">
+    <h2>Welcome</h2>
+    <p>Hi, I'm Daud Asia - a budding software engineer and aspiring project manager!</p>
+  </section>
+
+  <section class="about">
+    <h2>About Me</h2>
+    <p>
+      Project management enthusiast with foundational knowledge in Agile and Scrum Methodologies. Currently undergoing intensive software engineering training. Actively building coding and GitHub skills, and passionate about developing user-focused solutions.
+    </p>
+  </section>
+
+  <section class="education">
+    <h2>Education</h2>
+    <p><strong>Olabisi Onabanjo University</strong></p>
+    <p>Ago-Iwoye, Ogun State, Nigeria</p>
+    <p>MBBS - Medicine and Surgery</p>
+    <p>2024 - Present</p>
+
+    <br>
+
+    <p><strong>Vanguard Academy</strong></p>
+    <p>Ijebu-Ode, Ogun State, Nigeria</p>
+    <p>2017 - 2023</p>
+
+    <p>
+        <a href="https://drive.google.com/file/d/1wqyZ1TL8N1bifRkhvnPDnIXu32o4Rl--/view?usp=drivesdk" download>📄 Download My CV</a></p>
+  </section>
+
+  <section class="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML (Basic)</li>
+      <li>CSS (Basic)</li>
+      <li>Python (Basic)</li>
+      <li>Git & GitHub (Beginner)</li>
+      <li>Agile and Scrum Methodologies</li>
+      <li>Project Planning and Scheduling</li>
+      <li>Time and Risk Management</li>
+      <li>Team Coordination and Communication</li>
+    </ul>
+  </section>
+
+  <section class="projects">
+    <h2>Projects</h2>
+
+    <div class="project">
+      <h3><a href="https://daud-asia.github.io/mini-calculator/" target="_blank">Mini Calculator</a></h3>
+      <p>A simple calculator built using HTML, CSS, and JavaScript for basic arithmetic operations.</p>
+    </div>
+
+    <div class="project">
+      <h3><a href="https://daud-asia.github.io/My_profile-page/" target="_blank">Profile Page</a></h3>
+      <p>A clean profile page showcasing my background, skills, and interests in tech and project management.</p>
+    </div>
+  </section>
+
+  <section class="interests">
+    <h2>Interests</h2>
+    <p>
+      I am fascinated by the world of technology—from how websites are built to how apps solve real problems.
+      I enjoy learning how to write code and bring ideas to life. I'm also deeply passionate about project management, 
+      and I love organizing and coordinating tasks efficiently to meet deadlines and deliver value.
+    </p>
+  </section>
+
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>
+      📧 <a href="mailto:atinukeasia@gmail.com">atinukeasia@gmail.com</a> |
+      🔗 <a href="https://www.linkedin.com/in/asia-daud" target="_blank">LinkedIn</a> |
+      📱 +234-806-320-7314
+    </p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Daud Asia. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
+
+
 
